# moro-local

./: Cargo.toml  README.md
examples/: hello_world.rs  monitor.rs  replicas.rs
src/: body.rs  lib.rs  scope.rs  scope_body.rs  spawned.rs
