[package]
name = "moro-local"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/emschwartz/moro"
readme = "README.md"
description = "Experimental structured concurrency support for async Rust (similar to trio's nurseries). Works with non-Send futures on stable Rust."

[dependencies]
futures = "0.3.21"
async-trait = "0.1.56"
pin-project = "1.1.5"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1.17.0", features = ["full"] }
